--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         device-orientation-permission-ui="enabled: true"
       >
         <a-assets>
-          <img id="my-image" src="mio_contenuto.png" />
+          <img id="my-image" src="Image.png" />
         </a-assets>
 
         <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
