--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>WebAR con MindAR</title>
+    <title>Piazza dei Mestieri - AR</title>
     <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.1.4/dist/mindar-image.prod.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/aframe@1.2.0/dist/aframe.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.1.4/dist/mindar-image-aframe.prod.js"></script>
@@ -21,13 +21,27 @@
         device-orientation-permission-ui="enabled: true"
       >
         <a-assets>
-          <img id="my-image" src="Image.png" />
+          <video
+            id="my-video"
+            src="video.mp4"
+            preload="auto"
+            autoplay
+            loop
+            playsinline
+            crossorigin="anonymous"
+          ></video>
         </a-assets>
 
         <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
 
         <a-entity mindar-image-target="targetIndex: 0">
-          <a-image src="#my-image" position="0 0 0" height="1" width="1"></a-image>
+          <a-video
+            src="#my-video"
+            position="0 0 0"
+            width="1"
+            height="1"
+            rotation="0 0 0"
+          ></a-video>
         </a-entity>
       </a-scene>
     </div>
