--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <title>Piazza dei Mestieri - AR</title>
-    <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.1.4/dist/mindar-image.prod.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/aframe@1.2.0/dist/aframe.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.1.4/dist/mindar-image.prod.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.1.4/dist/mindar-image-aframe.prod.js"></script>
     <style>
       body, html { margin: 0; padding: 0; overflow: hidden; }
@@ -21,29 +21,40 @@
         device-orientation-permission-ui="enabled: true"
       >
         <a-assets>
-          <video
-            id="my-video"
-            src="video.mp4"
-            preload="auto"
-            autoplay
-            loop
-            playsinline
-            crossorigin="anonymous"
-          ></video>
+          <video id="my-video" src="video.mp4" preload="auto" loop muted playsinline crossorigin="anonymous"></video>
         </a-assets>
 
         <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
 
-        <a-entity mindar-image-target="targetIndex: 0">
+        <a-entity mindar-image-target="targetIndex: 0" id="video-target">
           <a-video
+            id="video-plane"
             src="#my-video"
             position="0 0 0"
             width="1"
             height="1"
-            rotation="0 0 0"
           ></a-video>
         </a-entity>
       </a-scene>
     </div>
+
+    <script>
+      AFRAME.registerComponent('play-video-on-visible', {
+        init: function () {
+          const video = document.querySelector("#my-video");
+          this.el.addEventListener("targetFound", () => {
+            video.play();
+          });
+          this.el.addEventListener("targetLost", () => {
+            video.pause();
+          });
+        }
+      });
+
+      document.addEventListener("DOMContentLoaded", () => {
+        const target = document.querySelector("#video-target");
+        target.setAttribute("play-video-on-visible", "");
+      });
+    </script>
   </body>
 </html>
