--- a/index.html
+++ b/index.html
@@ -27,13 +27,15 @@
         <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
 
         <a-entity mindar-image-target="targetIndex: 0" id="video-target">
-          <a-video
-            id="video-plane"
-            src="#my-video"
-            position="0 0 0"
-            width="1"
-            height="1"
-          ></a-video>
+          <video
+          id="my-video"
+          src="video.mp4"
+          preload="auto"
+          loop
+          muted
+          playsinline
+          crossorigin="anonymous"
+        ></video>
         </a-entity>
       </a-scene>
     </div>
