--- a/index.html
+++ b/index.html
@@ -21,21 +21,13 @@
         device-orientation-permission-ui="enabled: true"
       >
         <a-assets>
-          <video id="my-video" src="video.mp4" preload="auto" loop muted playsinline crossorigin="anonymous"></video>
+          <video id="my-video" src="PDM_Video.mp4" preload="auto" loop muted playsinline crossorigin="anonymous"></video>
         </a-assets>
 
         <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
 
         <a-entity mindar-image-target="targetIndex: 0" id="video-target">
-          <video
-          id="my-video"
-          src="video.mp4"
-          preload="auto"
-          loop
-          muted
-          playsinline
-          crossorigin="anonymous"
-        ></video>
+          <video id="my-video" src="PDM_Video.mp4" autoplay loop muted playsinline></video>
         </a-entity>
       </a-scene>
     </div>
