--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
 
         <a-entity mindar-image-target="targetIndex: 0" id="video-target">
-          <video id="my-video" src="PDM_Video.mp4" autoplay loop muted playsinline></video>
+          <a-video id="video-plane" src="#my-video" position="0 0 0"></a-video>
         </a-entity>
       </a-scene>
     </div>
@@ -45,9 +45,25 @@
         }
       });
 
+      AFRAME.registerComponent('adjust-video-size', {
+        init: function () {
+          const video = document.querySelector("#my-video");
+          const plane = this.el;
+
+          video.addEventListener('loadedmetadata', () => {
+            const ratio = video.videoWidth / video.videoHeight;
+            plane.setAttribute('width', 1);
+            plane.setAttribute('height', 1 / ratio);
+          });
+        }
+      });
+
       document.addEventListener("DOMContentLoaded", () => {
         const target = document.querySelector("#video-target");
         target.setAttribute("play-video-on-visible", "");
+
+        const videoPlane = document.querySelector("#video-plane");
+        videoPlane.setAttribute("adjust-video-size", "");
       });
     </script>
   </body>
